[package]
name = "minecraft-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "register"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
dotenv_codegen = "0.15.0"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
tokio = { version = "1.37.0", features = ["full"] }
